# GibbsQ

./: .gitignore  README.md  debug_audit.md  debug_grads.py  logsz.md  pyproject.toml  requirements.txt  sitecustomize.py  test_deprecation.py  verify_uas.py
configs/: debug.yaml  default.yaml  drift.yaml  fast.yaml  final_experiment.yaml  large.yaml  small.yaml
development_tests/: conftest.py  test_sg1_dr_phases_fix.py
docs/: final_experiment_config_audit.md  final_experiment_run_plan.md  final_experiment_trace.md  final_review.md  gibbsq.md  softmax_uas.md  softmax_usa.md
experiments/: drift_verification.py  policy_comparison.py  scientific_stress_test.py  stability_sweep.py  train_routing_agent.py
gibbsq/: __init__.py
ledger/: hypotheses.md  loop_log.md  master_index.md  patches.md  smoking_guns.md  sota_targets.md  sources_consulted.md  unknown_items.md  unverified_signals.md
logs/: debug_logs.md  small_logs.md
manuscripts/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main_text.txt  out.txt  pdflatex14988.fls  preamble.tex  references.bib
notebooks/: colab_reproduction_runner.ipynb  final_preflight_check.ipynb
scripts/: analyze_results.py  profile_ssa_bottleneck.py  run_experiment.ps1  run_experiment.sh  run_paper_experiments.ps1  run_paper_experiments.sh  run_paper_experiments_sp.sh  setup_env.py  verify_implementation.ps1
tests/: baseline_test.py  conftest.py  equivalence_test_ssa.py  test_ablation_regeneration.py  test_analysis_hardened.py  test_baseline_bug.py  test_config.py  test_config_hardened.py  test_dga.py  (+35 more)
(+211 files in other folders)
